tests/snapshots/run_wpt_conformance__litert_reduceL1_float16_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float16 1D constant tensor all positive default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL1 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([130, 69, 84, 82, 182, 62, 67, 85, 213, 75, 157, 82, 144, 72, 60, 79, 73, 74, 179, 73, 111, 85, 8, 84, 117, 84, 198, 84, 49, 81, 25, 86, 243, 79, 23, 70, 183, 83, 92, 84, 221, 80, 137, 82, 148, 77, 49, 86]);
  }

  nodes {
    [reduceL1Output] = reduceL1(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
